# zbot

./: .clog.toml  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  changelog.md  config.sample.toml  config.toml.sample  run.sh
src/: auth.rs  cmd.rs  config.rs  discord.rs  main.rs  state.rs  strawpoll.rs  twitch.rs
