[package]
name    = "zbot"
version = "0.2.6"
authors = ["zxv <zxv@tfwno.gf>"]
build   = "build.rs"

[dependencies]
irc          = "0.13"
serenity     = "0.5.1"
toml         = "0.4"
serde        = "1.0"
serde_derive = "1.0"
serde_json   = "1.0"
rb           = "0.3.2"
rusqlite     = "0.14"
rand         = "0.5.0"
regex        = "1.0.0"
bitflags     = "1.0"
curl         = "0.4"
dirs         = "*"
