[package]
name    = "zbot"
version = "0.2.6"
authors = ["zxv <zxv@tfwno.gf>"]
build   = "build.rs"

[dependencies]
irc          = { git = "https://github.com/aatxe/irc", branch = "develop" }
toml         = "0.4"
serde        = "1.0"
serde_derive = "1.0"
serde_json   = "1.0"
rb           = "0.3"
rusqlite     = "0.14"
rand         = "0.5"
regex        = "1.0"
bitflags     = "1.0"
curl         = "0.4"
dirs         = "*"
