[package]
name    = "zbot"
version = "0.2.6"
authors = ["zxv <zxv@tfwno.gf>"]
build   = "build.rs"

[dependencies]
irc          = "0.13.6"
toml         = "0.4.8"
serde        = "1.0.80"
serde_derive = "1.0.80"
serde_json   = "1.0.32"
rb           = "0.3.2"
rusqlite     = "0.14.0"
rand         = "0.5.5"
regex        = "1.0.5"
bitflags     = "1.0.4"
curl         = "0.4.18"
dirs         = "1.0.4"
